Updated Sancus research page.

--- a/wistp2015/index.html
+++ b/wistp2015/index.html
@@ -13,9 +13,10 @@
 <p>Jo Van Bulck, Job Noorman, Jan Tobias M&uuml;hlberg and Frank Piessens</p>
 </center>
 
-<p>This page provides the <a href="sfs-src.tar.gz">source code</a> and usage
-examples of the protected file system, presented at <em>Workshop in Information
-Security Theory and Practice</em> (WISTP'2015).</p>
+<p>This page provides the <a href="https://github.com/sancus-pma/sm-access-control">source code</a> and usage
+examples of the protected file system, presented at the <em>9th WISTP
+International Conference on Information Security Theory and Practice</em>
+(WISTP'15).</p>
 
 <p>
 Below, we repeat the abstract of the paper and provide an example program to
